<resources>
    <string name="app_name">Calculator</string>
    <string name="Mm">M-</string>
    <string name="Mp">M+</string>
    <string name="MS">MS</string>
    <string name="MR">MR</string>
    <string name="MC">MC</string>
    <string name="Back"><![CDATA[<--]]></string>
    <string name="PM">±</string>
    <string name="C">C</string>
    <string name="Null">0</string>
    <string name="Dot">.</string>
    <string name="Equals">=</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Root">√</string>
    <string name="Fraction">1/x</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Plus">+</string>
    <string name="Multiply">*</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Minus">-</string>
    <string name="Share">/</string>
</resources>