<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/TextField1"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginHorizontal="15sp"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="" />

    <TextView
        android:id="@+id/TextField2"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15sp"
        android:layout_height="100sp"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text=""/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="0sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ButtonMC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/MC"
                android:textSize="20sp"

                />
            <Button
                android:id="@+id/ButtonMR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/MR"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonMS"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/MS"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonMp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Mp"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonMm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Mm"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:minHeight="0sp"
            android:layout_weight="1">

            <Button
                android:id="@+id/ButtonBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Back"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonPM"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/PM"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/C"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:minHeight="0sp"
            android:layout_weight="1">
            <Button
                android:id="@+id/ButtonSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Seven"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonEight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Eight"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonNine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Nine"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonRoot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Root"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonFraction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Fraction"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:minHeight="0sp"
            android:layout_weight="1">
            <Button
                android:id="@+id/ButtonFour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Four"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonFive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Five"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonSix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Six"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Plus"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Multiply"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:minHeight="0sp"
            android:layout_weight="1">
            <Button
                android:id="@+id/ButtonOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/One"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Two"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonThree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Three"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Minus"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonShare"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Share"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:minHeight="0sp"
            android:layout_weight="1">

            <Button
                android:id="@+id/ButtonNull"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="0.5sp"
                android:layout_weight="1"
                android:text="@string/Null"
                android:textSize="20sp" />

            <Button
                android:id="@+id/ButtonDot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Dot"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/ButtonEquals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="0.5sp"
                android:text="@string/Equals"
                android:textSize="20sp"
                />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>